fix hero image alignment

--- a/src/scss/hero-image.scss
+++ b/src/scss/hero-image.scss
@@ -18,6 +18,6 @@
   @media (min-width: 56.25rem) {
     height: auto;
     display: initial;
-    // justify-self: flex-end;
+    justify-self: flex-end;
   }
 }
